[gd_scene load_steps=18 format=3 uid="uid://dm3inftubtnc1"]

[ext_resource type="Script" path="res://Menu/HUD/Scripts/player_hud.gd" id="1_2umyh"]
[ext_resource type="Texture2D" uid="uid://cdc1mnfwxhuul" path="res://Menu/HUD/CharactersIcons/tile_0084.png" id="1_p7b8i"]
[ext_resource type="Texture2D" uid="uid://wegj6iko3j2u" path="res://Assets/Assets UI/kenney_fantasy-ui-borders/Vector/fantasy-ui-borders.svg" id="2_5c1l3"]
[ext_resource type="Texture2D" uid="uid://w3vir2ygmso3" path="res://Menu/HUD/CharactersIcons/tile_0087.png" id="2_fa0n6"]
[ext_resource type="Texture2D" uid="uid://dnqd0g1vntfhh" path="res://Menu/HUD/CharactersIcons/tile_0097.png" id="3_e5hkq"]
[ext_resource type="Texture2D" uid="uid://c5flabsvurhbd" path="res://Menu/HUD/CharactersIcons/tile_0099.png" id="4_pcldv"]
[ext_resource type="FontFile" uid="uid://d2h5c3d6e3b0c" path="res://Assets/Fonts/PeaberryBase.ttf" id="6_m0icc"]
[ext_resource type="Texture2D" uid="uid://cp8teq6bp0coj" path="res://Assets/Assets UI/kenney_fantasy-ui-borders/Vertical/divider-002.png" id="7_cxsdo"]
[ext_resource type="Texture2D" uid="uid://bc5yybwmdkv8e" path="res://Assets/Assets UI/Other/OverBar.png" id="8_767cx"]
[ext_resource type="Texture2D" uid="uid://bi06mt42djxma" path="res://Assets/Assets UI/Other/ProgressBar.png" id="9_m82hv"]
[ext_resource type="Texture2D" uid="uid://b0iihacydyl42" path="res://Assets/Assets UI/Other/UnderBar.png" id="10_tu3ue"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_glrxv"]
texture = ExtResource("7_cxsdo")
texture_margin_top = 2.0
texture_margin_bottom = 2.0
expand_margin_top = 23.0
expand_margin_bottom = 24.0
region_rect = Rect2(43, 0, 10, 96)

[sub_resource type="StyleBoxLine" id="StyleBoxLine_hx480"]
color = Color(1, 1, 1, 1)
vertical = true

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ugos4"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sx75o"]
bg_color = Color(0, 0.85098, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3kre3"]
bg_color = Color(0.0941176, 0.12549, 0.14902, 1)
expand_margin_left = 1.0
expand_margin_top = 1.0
expand_margin_right = 1.0
expand_margin_bottom = 1.0
shadow_color = Color(0, 0, 0, 0.27451)
shadow_offset = Vector2(0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5aflu"]
bg_color = Color(0, 0.439216, 0.541176, 1)

[node name="PlayerHUD" type="MarginContainer"]
offset_right = 258.0
offset_bottom = 77.0
theme_override_constants/margin_left = 6
theme_override_constants/margin_top = 6
theme_override_constants/margin_right = 6
theme_override_constants/margin_bottom = 6
script = ExtResource("1_2umyh")

[node name="NinePatchRect" type="NinePatchRect" parent="."]
self_modulate = Color(0.0901961, 0.0901961, 0.0901961, 1)
texture_filter = 1
custom_minimum_size = Vector2(260, 75)
layout_mode = 2
texture = ExtResource("2_5c1l3")
region_rect = Rect2(102, 40, 48, 48)
patch_margin_left = 12
patch_margin_top = 12
patch_margin_right = 12
patch_margin_bottom = 12

[node name="MarginContainer" type="MarginContainer" parent="NinePatchRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="HBoxContainer" type="HBoxContainer" parent="NinePatchRect/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="IconContainer" type="MarginContainer" parent="NinePatchRect/MarginContainer/HBoxContainer"]
texture_filter = 1
layout_mode = 2

[node name="MageIcon" type="TextureRect" parent="NinePatchRect/MarginContainer/HBoxContainer/IconContainer"]
layout_mode = 2
texture = ExtResource("1_p7b8i")
expand_mode = 2

[node name="BarbarianIcon" type="TextureRect" parent="NinePatchRect/MarginContainer/HBoxContainer/IconContainer"]
visible = false
layout_mode = 2
texture = ExtResource("2_fa0n6")
expand_mode = 2

[node name="KnightIcon" type="TextureRect" parent="NinePatchRect/MarginContainer/HBoxContainer/IconContainer"]
visible = false
layout_mode = 2
texture = ExtResource("3_e5hkq")
expand_mode = 2

[node name="RangerIcon" type="TextureRect" parent="NinePatchRect/MarginContainer/HBoxContainer/IconContainer"]
visible = false
layout_mode = 2
texture = ExtResource("4_pcldv")
expand_mode = 2

[node name="HSeparator" type="HSeparator" parent="NinePatchRect/MarginContainer/HBoxContainer"]
self_modulate = Color(0.843137, 0.843137, 0.843137, 1)
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = -12
theme_override_styles/separator = SubResource("StyleBoxTexture_glrxv")

[node name="InfoContainer" type="VBoxContainer" parent="NinePatchRect/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 6
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="NinePatchRect/MarginContainer/HBoxContainer/InfoContainer"]
texture_filter = 1
layout_mode = 2
theme_override_constants/separation = 6

[node name="PlayerLabel" type="Label" parent="NinePatchRect/MarginContainer/HBoxContainer/InfoContainer/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("6_m0icc")
theme_override_font_sizes/font_size = 16
text = "Jugador 1"
vertical_alignment = 1

[node name="VSeparator" type="VSeparator" parent="NinePatchRect/MarginContainer/HBoxContainer/InfoContainer/HBoxContainer"]
self_modulate = Color(0.843137, 0.843137, 0.843137, 1)
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxLine_hx480")

[node name="LifeIconContainer" type="MarginContainer" parent="NinePatchRect/MarginContainer/HBoxContainer/InfoContainer/HBoxContainer"]
layout_mode = 2

[node name="MageIcon" type="TextureRect" parent="NinePatchRect/MarginContainer/HBoxContainer/InfoContainer/HBoxContainer/LifeIconContainer"]
layout_mode = 2
texture = ExtResource("1_p7b8i")
expand_mode = 2

[node name="BarbarianIcon" type="TextureRect" parent="NinePatchRect/MarginContainer/HBoxContainer/InfoContainer/HBoxContainer/LifeIconContainer"]
visible = false
layout_mode = 2
texture = ExtResource("2_fa0n6")
expand_mode = 2

[node name="KnightIcon" type="TextureRect" parent="NinePatchRect/MarginContainer/HBoxContainer/InfoContainer/HBoxContainer/LifeIconContainer"]
visible = false
layout_mode = 2
texture = ExtResource("3_e5hkq")
expand_mode = 2

[node name="RangerIcon" type="TextureRect" parent="NinePatchRect/MarginContainer/HBoxContainer/InfoContainer/HBoxContainer/LifeIconContainer"]
visible = false
layout_mode = 2
texture = ExtResource("4_pcldv")
expand_mode = 2

[node name="xLabel" type="Label" parent="NinePatchRect/MarginContainer/HBoxContainer/InfoContainer/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("6_m0icc")
text = "x"
horizontal_alignment = 2

[node name="LifeNumberLabel" type="Label" parent="NinePatchRect/MarginContainer/HBoxContainer/InfoContainer/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("6_m0icc")
text = "3"
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="NinePatchRect/MarginContainer/HBoxContainer/InfoContainer"]
custom_minimum_size = Vector2(0, 21)
layout_mode = 2

[node name="ManaBarPrev" type="ProgressBar" parent="NinePatchRect/MarginContainer/HBoxContainer/InfoContainer/MarginContainer"]
visible = false
z_index = 1
custom_minimum_size = Vector2(150, 12)
layout_mode = 2
theme_override_styles/background = SubResource("StyleBoxEmpty_ugos4")
theme_override_styles/fill = SubResource("StyleBoxFlat_sx75o")
value = 60.0
show_percentage = false

[node name="ManaDelayBarPrev" type="ProgressBar" parent="NinePatchRect/MarginContainer/HBoxContainer/InfoContainer/MarginContainer/ManaBarPrev"]
visible = false
z_index = -1
custom_minimum_size = Vector2(150, 12)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/background = SubResource("StyleBoxFlat_3kre3")
theme_override_styles/fill = SubResource("StyleBoxFlat_5aflu")
value = 80.0
show_percentage = false

[node name="Timer" type="Timer" parent="NinePatchRect/MarginContainer/HBoxContainer/InfoContainer/MarginContainer/ManaBarPrev"]
wait_time = 0.6
one_shot = true

[node name="ManaBar" type="TextureProgressBar" parent="NinePatchRect/MarginContainer/HBoxContainer/InfoContainer/MarginContainer"]
texture_filter = 1
layout_mode = 2
value = 50.0
nine_patch_stretch = true
texture_over = ExtResource("8_767cx")
texture_progress = ExtResource("9_m82hv")

[node name="ManaDelayBar" type="TextureProgressBar" parent="NinePatchRect/MarginContainer/HBoxContainer/InfoContainer/MarginContainer/ManaBar"]
self_modulate = Color(0.368627, 0.368627, 0.368627, 1)
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
value = 80.0
nine_patch_stretch = true
texture_under = ExtResource("10_tu3ue")
texture_progress = ExtResource("9_m82hv")

[node name="Timer" type="Timer" parent="NinePatchRect/MarginContainer/HBoxContainer/InfoContainer/MarginContainer/ManaBar"]
wait_time = 0.6
one_shot = true

[connection signal="timeout" from="NinePatchRect/MarginContainer/HBoxContainer/InfoContainer/MarginContainer/ManaBarPrev/Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="NinePatchRect/MarginContainer/HBoxContainer/InfoContainer/MarginContainer/ManaBar/Timer" to="." method="_on_timer_timeout"]
